# BKWHackathon

./: README.md  main.py  pyproject.toml
data/: 410.csv  420.csv  430.csv  440.csv  ClassifierSheet.csv  classified_rooms.csv  input.csv  reference.csv
output/: classified_rooms.csv  cost_estimates.txt  power_requirements.csv
src/: GPTCall.py  costCalculations.py  pipeline.py  ragPipe.py  semanticEmbds.py
temp/: input.csv
