[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fachplanner"
version = "1.0.0"
description = "AI-powered HVAC cost estimation system with hybrid embeddings and RAG"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DataHack Team", email = "team@datahack.com"}
]
keywords = ["hvac", "cost-estimation", "ai", "rag", "embeddings", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Framework
    "streamlit>=1.28.0",
    
    # LLM & AI
    "openai>=1.0.0",
    "ollama>=0.1.0",
    
    # Embeddings & NLP
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    
    # Vector Store & Search
    "faiss-cpu>=1.7.4",
    
    # ML & Data Science
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

gpu = [
    "faiss-gpu>=1.7.4",
    "torch>=2.0.0+cu118",
]

[project.urls]
Homepage = "https://github.com/datahack/fachplanner"
Repository = "https://github.com/datahack/fachplanner"
Documentation = "https://github.com/datahack/fachplanner/wiki"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false